Adapt lombok and the projects to java 11, many things do not work
Also, since lombok and the libraries are automatic modules, jlink cannot
be used to generate a reduced java image.

The plugin loading mechanism has to be reworked, since we don't have
access to a classpath anymore.

I'm not able to build with intellij, but i can with maven.